--- a/CSS/index.css
+++ b/CSS/index.css
@@ -47,6 +47,7 @@ nav {
 nav a:hover{
     color:black;
     font-size: 1.2em;
+    transition: 0.5s;
   }
 
 nav #actual{
@@ -133,4 +134,27 @@ nav #actual{
   display: flex;
   justify-content: space-between;
   font-size: 14px;
+}
+
+.detallesCuenta{
+  
+  text-align: center;
+  justify-content: space-around;
+  display: flex;
+
+  & form button {
+    background-color: #584d42;
+    color: white;
+    padding: 8px 16px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 14px;
+  }
+  & form button:hover {
+    background-color: #352e28;
+    font-size: 12px;
+    transition: 0.4s;
+  }
+
 }
