Como hacer el devolver prenda en mi carrito, comprobar el duplicado de primary key al añadir

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -123,6 +123,10 @@ nav #actual{
   font-size: 14px;
 }
 
+.add-button:hover {
+  background-color: rgb(100, 84, 14);
+}
+
 .detallesCuenta{
   
   text-align: center;
@@ -149,6 +153,7 @@ nav #actual{
 /*Estilo del div del infoPrenda que muestra una sola prenda*/
 .infoPrenda{
   display: flex;
+  justify-content: center;
 
   & form button{
     background-color: #584d42;
@@ -184,6 +189,8 @@ nav #actual{
   }
 
   & form input{
+    font-weight: bold;
+    text-align: center;
     margin-left: 5px;
     border: 0px;
     border-bottom: 1px solid black;
@@ -196,9 +203,31 @@ nav #actual{
 
 }
 
-.add-button:hover {
-  background-color: rgb(100, 84, 14);
+/*Estilo del div carrito*/
+.carrito{
+  
+  padding: 2em;
+  text-align: center;
+
+  & a{
+    background-color: #584d42;
+    color: white;
+    padding: 8px 16px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 14px;
+    text-decoration: none;
+  }
+  
+  & a:hover{
+    background-color: #352e28;
+    font-size: 12px;
+    transition: 0.4s;
+  }
+
 }
+
 
 /*AQUI ESTA EL ESTILO DEL FOOTER*/
 .footer{
