--- a/CSS/formularios.css
+++ b/CSS/formularios.css
@@ -1,92 +1,101 @@
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Kanit:wght@300&family=Pixelify+Sans&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Kanit:wght@300&family=Pixelify+Sans&display=swap");
 
-*{
-    font-family: 'Kanit', sans-serif;  
+* {
+  font-family: "Kanit", sans-serif;
 }
 
-body{
-    background-color:#8D7B68;
-    justify-content: center;
-    align-items: center;
-    display: flex;
+body {
+  background-color: #8d7b68;
+  justify-content: center;
+  align-items: center;
+  display: flex;
 }
 
-.content{
-    background-color: #C8B6A6;
-    margin: 8em;
-    border-radius: 20px;
-    backdrop-filter: blur(10px);
-    width: 35em;
-    box-shadow: 0px 0px 30px 10px #584d42;
+.content {
+  background-color: #c8b6a6;
+  margin: 8em;
+  border-radius: 20px;
+  backdrop-filter: blur(10px);
+  width: 35em;
+  box-shadow: 0px 0px 30px 10px #584d42;
 }
 
-.content form{
-    margin: 3em;
+.content form {
+  margin: 3em;
 }
 
-fieldset{
-    border-style: hidden;
+fieldset {
+  border-style: hidden;
 }
 
-legend{
-    color: #8D7B68;
-    padding: 10px;
-    font-weight: bold;
-    font-size: 30px;
-    text-align: center;
+legend {
+  color: #8d7b68;
+  padding: 10px;
+  font-weight: bold;
+  font-size: 30px;
+  text-align: center;
 }
 
 /* CAMPOS */
-.form-campo{
-    margin: 10px;
-    text-align: center;
-    border: 0px;
-    border-bottom: 4px;
-    border-color: black;
-    border-style: solid;
+.form-campo {
+  margin: 10px;
+  text-align: center;
+  border: 0px;
+  border-bottom: 4px;
+  border-color: black;
+  border-style: solid;
 }
 
-.form-campo label{
-    font-size: 20px;
+.form-campo label {
+  font-size: 20px;
 }
 
-.form-campo input{
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    background-color: transparent;
-    border: 0;
-    outline: none;
-
+.form-campo input {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  background-color: transparent;
+  border: 0;
+  outline: none;
 }
 
 /* Resto */
 
-.form-registrar{
-    padding: 10px;
+.form-registrar {
+  padding: 10px;
+  text-align: center;
+}
+
+.form-registrar a {
+  color: rgb(100, 84, 14);
+  text-decoration: none;
+  font-size: 20px;
+  margin-left: 4px;
+}
+.form-registrar a:hover {
+  text-decoration: underline;
+}
+.form-acceder button {
+  font-size: larger;
+  text-align: center;
+  border: 0px;
+  background-color: #a4907c;
+  width: 100%;
+  cursor: pointer;
+  border-radius: 30px;
+}
+
+.form-acceder button:hover {
+  box-shadow: 0px 0px 30px 0px #584d42;
+  transition: all 0.6s;
+}
+
+/*Estilo errores*/
+.errores {
     text-align: center;
+  p {
+    color: red;
+    font-weight: bold;
+    font-size: 1em;
+  }
 }
-
-.form-registrar a{
-    color: rgb(100, 84, 14);
-    text-decoration: none;
-    font-size: 20px;
-    margin-left: 4px;
-}
-.form-registrar a:hover{
-    text-decoration: underline;
-}
-.form-acceder button{
-    font-size: larger;
-    text-align: center;
-    border: 0px;
-    background-color: #A4907C;
-    width: 100%;
-    cursor: pointer;
-    border-radius: 30px;
-}
-
-.form-acceder button:hover{
-    box-shadow: 0px 0px 30px 0px #584d42;
-    transition: all 0.6s;}
-
