Paginaciones hechas, y borrado del input para buscar las prendas -> Mandar correo cuando se realiza el pedido

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -67,7 +67,7 @@ nav #actual {
 
 .mostrarPrendas {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   margin-bottom: 20px;
 }
 
