--- a/CSS/admin.css
+++ b/CSS/admin.css
@@ -24,7 +24,7 @@ body {
   border: 5px solid rgb(0, 132, 255);
   border-radius: 30px;
   /*estilo para el div de errores*/
-  .error{
+  .error {
     color: red;
   }
   /*Estilo de los controles que manejan lo que quiere conseguir el administrador*/
@@ -49,9 +49,6 @@ body {
           transform: translateY(-6px);
           border-radius: 17px;
         }
-      }
-      #actual{
-        transform: translateY(-8px);
       }
     }
   }
@@ -137,37 +134,6 @@ body {
       font-size: 1.5em;
       color: rgb(0, 132, 255);
     }
-    /*Para el div que contiene la busqueda*/
-    .busqueda {
-      display: flex;
-      button {
-        font-size: 0.7em;
-        border: none;
-        margin-left: 1em;
-        display: inline-block;
-        background-color: rgb(0, 132, 255);
-        padding: 0.4em;
-        color: whitesmoke;
-        border-radius: 5px;
-        cursor: pointer;
-        transition: background-color 0.3s ease-in-out;
-        &:hover {
-          background-color: rgb(204, 204, 204);
-        }
-      }
-      input {
-        font-size: 0.8em;
-        margin-left: 3em;
-        width: 13em;
-        margin-left: 20px;
-        background-color: whitesmoke;
-        border: none;
-        border-bottom: 3px solid rgb(0, 195, 255);
-        &:focus {
-          outline: none;
-        }
-      }
-    }
     /*Para el siguiente div que va a contener la tabla de las prendas*/
     .tablaPrendas {
       display: flex;
@@ -186,6 +152,56 @@ body {
         /* Aplica a todas las filas pares */
         tr:nth-child(even) {
           background-color: #d4d4d4; /* o cualquier otro tono ligeramente más oscuro de blanco */
+        }
+        tr {
+          input {
+            width: 100%;
+            height: 100%;
+            background-color: transparent;
+            border: none;
+            font-weight: bold;
+            font-size: 0.8em;
+            &:hover {
+              color: rgb(4, 151, 196);
+            }
+            &:focus {
+              outline: none;
+            }
+          }
+          button {
+            font-size: 0.7em;
+            border: none;
+            margin-left: 1em;
+            display: inline-block;
+            background-color: rgb(0, 132, 255);
+            padding: 0.5em;
+            color: whitesmoke;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.1s ease-in-out;
+            &:hover {
+              background-color: rgb(204, 204, 204);
+            }
+          }
+        }
+      }
+    }
+    /*Para el div que contiene los enlaces a las diferentes paginas*/
+    .paginas {
+      margin-top: 2em;
+      a {
+        display: inline-block;
+        color: black;
+        text-decoration: none;
+        border-radius: 20px;
+        border: 3px solid rgb(0, 132, 255);
+        padding: 0.4em;
+        transition: border-radius 0.2s, background-color 0.5s,
+          transform 0.3s ease-in-out;
+        &:hover {
+          background-color: rgb(202, 201, 201);
+          transform: translateY(8px);
+          border-radius: 17px;
         }
       }
     }
